--- a/gatsby/content/icymi-just-married.mdx
+++ b/gatsby/content/icymi-just-married.mdx
@@ -7,12 +7,15 @@ tags:
   - icymi
 ---
 
-<iframe 
-  style="border: 0; width: 320px; height: 470px;" 
-  src="https://bandcamp.com/EmbeddedPlayer/album=3914936245/size=large/bgcol=ffffff/linkcol=0687f5/tracklist=false/transparent=true/" 
-  seamless
-  class="float-right"
-><a href="https://gloccamorradied.bandcamp.com/album/just-married-2">just married by glocca morra</a></iframe>
+import BandcampAlbumEmbed from '../src/components/Shared/BandcampAlbumEmbed'
+
+<BandcampAlbumEmbed 
+  name="Just Married" 
+  artist="Glocca Morra" 
+  id="3914936245"
+  url="https://gloccamorradied.bandcamp.com/album/just-married-2"
+  className="float-right"
+/>
 
 Y'all, I love emo music. As you can tell, I have a [range of emotions](/feelings) and I have "sad boi" tendencies for
 sure. So this shouldn't love of emo music shouldn't come as a surprise. All the same, I'm here to tell you that emo gets
