Add loading skeleton to album embeds
- Add YouTube embed component
- Add some more accomplishments

--- a/gatsby/content/icymi-just-married.mdx
+++ b/gatsby/content/icymi-just-married.mdx
@@ -3,16 +3,17 @@ title: "ICYMI: Glocca Morra - Just Married"
 date: 2021-11-15T04:00
 description: Classic emo album about the first year of marriage. Also, a quick primer on emo music.
 cover: ./img/icymi/just-married.jpeg
+slug: icymi-glocca-morra-just-married
 tags:
   - icymi
 ---
 
-import BandcampAlbumEmbed from '../src/components/Shared/BandcampAlbumEmbed'
+import AlbumEmbed from '../src/components/Embeds/Album'
 
-<BandcampAlbumEmbed 
+<AlbumEmbed 
   name="Just Married" 
   artist="Glocca Morra" 
-  id="3914936245"
+  bandcampID="3914936245"
   url="https://gloccamorradied.bandcamp.com/album/just-married-2"
   className="float-right"
 />
