Start adding accomplishments & disappointments

--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -31,6 +31,45 @@ flexitarian four dollar toast.
 
 ## 3. Financial Security
 
+[As I mentioned in a past post](/blog/adhd), I have had issues in the past around being poor. Some food insecurity, some
+homelessness and that has stuck with me for years. Even after I moved to NYC and started making decent money, I would
+still be worried about it going away in an instant.
+
+At the beginning of the pandemic, my therapist and I worked on this and she gave me this great tool. It's called "then
+what" and it goes like this:
+
+* I lose my job... _and then what?_
+* I don't have an income and need to dip into my savings... _and then what?_
+* My savings will last me like two months... _and then what?_
+* I could max out my credit cards and get like another 3 months... _and then what?_
+* ...after 5 months I should have been able to land a job, this isn't even an issue.
+
+With this situation handled mentally, I started to prepare to pump those numbers up. Between raises over the last year,
+student loan payments being paused and a liquidity event at my job, I now have enough money to not work for 6 months
+without having to touch my credit.
+
+For the first time in my adult life, I'm not super worried about money. I know I can pay my bills, I know I'm not going
+to starve. My concern is now outward, I want others to experience this security.
+
+# Disappointments
+
+## 1. Getting COVID Twice
+
+I got COVID in March and it knocked me out of work for two weeks. It was really bad, I couldn't leave my bed for so
+long. Luckily, I didn't lose my sense of taste and I'm still alive, so silver linings, right? I also caught
+a breakthrough in August that knocked me out of work for like two days. Wasn't too bad. Sadly, my lung capacity hasn't
+fully recovered, but I also haven't pushed myself to recover.
+
+## 2. Work Definitely Did Not Go As I Envisioned
+
+I'm going to speak generally here as the details don't matter. It was painful to see a lot of my teammates move on to
+other places and my employer had a different plan on hiring than I would have liked. Their plan will probably be
+successful in the long term, just stunk for me.
+
+All that is in the past, I put in my two weeks notice and am going to do a job search in January.
+
+## 3. I Put Absolutely No Effort Into My Health
+
 I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
 subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
 loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
@@ -150,6 +189,46 @@ on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro 
 ## 6. _The House Is Burning_ - Isaiah Rashad
 
 <AlbumEmbed spotifyID="6TQ8nqw43uUOWu7Yqp58ko" className="float-right" />
+
+I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
+subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
+loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
+flexitarian four dollar toast.
+
+Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
+flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
+
+Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
+skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
+cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
+on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+
+## 7. _Half God_ - Wiki
+
+<AlbumEmbed
+  name="Half God"
+  artist="Wiki"
+  url="https://wiksetnyc.bandcamp.com/album/half-god"
+  bandcampID="2800528835"
+  className="float-right"
+/>
+
+I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
+subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
+loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
+flexitarian four dollar toast.
+
+Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
+flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
+
+Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
+skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
+cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
+on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+
+## 8. _GLOW ON_ - Turnstile
+
+<AlbumEmbed spotifyID="2NrYPcMmQBlbBxopc2XlzS" className="float-right" />
 
 I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
 subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
