--- a/gatsby/content/pbj-and-software-engineering.mdx
+++ b/gatsby/content/pbj-and-software-engineering.mdx
@@ -3,6 +3,7 @@ title: "PBJ & Software Engineering?"
 description: "Is it hack to say that I learned everything I need to know in kindergarden?"
 slug: pbj-and-software-engineering❓
 date: 2021-11-19T05:00
+draft: true
 tags:
   - code
   - cooking
