Add my blurb on CALL ME IF YOU GET LOST

--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -104,18 +104,29 @@ on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro 
 
 <AlbumEmbed spotifyID="45ba6QAtNrdv6Ke4MFOKk9" className="float-right" />
 
-I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
-subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
-loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
-flexitarian four dollar toast.
+In the year 2021, Tyler really put out a DJ Drama hosted mixtape. I did not have that on my bingo card for the year
+because why would such an awesome thought cross my mind? Most importantly, it delivers in such a complete way that I'm
+going to have trouble describing it.
 
-Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
-flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
+Looking back on Tyler's previous albums, you got him rapping at a pretty high level up until _WOLF_ but doing and
+edgelord persona, going experimental and taking risks on _CHERRY BOMB_ and getting to a great place mentally on _Flower
+Boy_. Then came _IGOR_, which musically, I feel has a lot in common with _CHERRY BOMB_, but executed in a much more
+enjoyable way. What could come next?
 
-Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
-skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
-cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
-on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+On _CALL ME IF YOU GET LOST_, he takes all the growth post _WOLF_, both personally and from a production standpoint, and
+turns in a more rap focused album that has a little bit of everything. I personally love Tyler's heavier and soulful
+songs, like _CORSO_, _LEMONHEAD_, _JUGGERNAUT_ and _MASSA_. It also has some of the best soul sample songs in his
+discography, like _HOT WIND BLOWS_ and _SAFARI_. And if you really want some nice party songs to dance to, _SWEET
+/ I THOUGHT YOU WANTED TO DANCE_ is one of the best songs of the year.
+
+What pushes this album over the edge for me is DJ Drama. I love when known DJs show up when you least expect it. Kid
+Capri on Kendrick's _DAMN_. [_STN MTN_](https://www.youtube.com/watch?v=OW9N0jwWUgw) is easily my favorite Childish
+Gambino album because of Drama and it's format. In past albums, Tyler has had various alter egos that are more
+braggadocios than him to speak his id. On _CMIYGL_, DJ Drama is that alter ego that talks all the shit and I am here for
+it!
+
+I love the brutal honesty on each song and am so happy that Tyler has found his way in the world. Could anyone have seen
+Odd Future still turning in classics a decade later?
 
 ## 3. _Pray For Hati_ - Mach-Hommy
 
