Write more of the goodbye post

--- a/gatsby/content/what-i-learned-at-talent-inc.mdx
+++ b/gatsby/content/what-i-learned-at-talent-inc.mdx
@@ -29,15 +29,22 @@ How can I reward this team effort? I was lucky during my tenure at Talent Inc ma
 the ground up to empower these users. I feel that we delivered on those opportunities and the fact that we exited kind
 of validates that belief.
 
+It goes without saying, but I will say it because it's important: **I am going to miss working with these people so
+much. I will never forget your kindness and understanding.**
+
 <iframe src="https://giphy.com/embed/ALQnCUBuggPxS" width="480" height="270" frameBorder="0" class="giphy-embed" allowFullScreen></iframe><p><a href="https://giphy.com/gifs/mvp-ALQnCUBuggPxS">via GIPHY</a></p>
 
 ## So Many Data Pipelines
 
 All my jobs previous to this were mostly at consulting firms. One thing I can tell you about consulting is that you are
 somewhat separated from the end user. My joke about my consulting is the main problem you are solving is getting that
-next check to show up. As such, your users can become adversaries in your mind. You get okay with dropping events.
+next check to show up. As such, your users can become adversaries in your mind. You get okay with dropping events. You
+deprioritize bugs because it doesn't effect your bottom line.
 
-The concerns are different when you work at a customer focused startup though. 
+The concerns are different when you work at a customer focused startup though. Things have to be fast, so you push as
+much off the request thread as possible. That stuff off the main thread needs to run reliably, so you throw money at AWS
+for SQS and write a lot of Lambdas (which are my favorite technological discovery during my time at Talent Inc, if
+I ever start a company, it will be all Lambdas).
 
 ## Experimentation Is Crucial
 
