Update the ending

--- a/gatsby/content/what-i-learned-at-talent-inc.mdx
+++ b/gatsby/content/what-i-learned-at-talent-inc.mdx
@@ -109,9 +109,11 @@ expect. It won't fix everything, but it will fix a lot of things.
 ## Here's To Tomorrow!
 
 As you can tell, I enjoyed my time at Talent Inc and I hope they enjoyed having me. If you're looking for your next gig,
-I cannot recommend them enough. The future is very bright there and I'm sad that I won't be around to see it. At the
-same time, I'm very excited for what's next. I don't even know what is next. I just know that I'm going to take a few
-weeks off before job searching in January.
+I cannot recommend them enough. The future is very bright there and I'm sad that I won't be around to see it. 
+
+At the same time, I'm very excited for what's next. I don't even know what is next. I only have one speed which is "go
+so hard I burnout once a year". I should probably work on that. I'm going to take a few weeks to establish some better
+habits and doing a through job search next year.
 
 <figure>
   <img src="./img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg" alt="Me & a coworker in a marketing photo looking at an empty notebook" />
