--- a/gatsby/content/what-i-learned-at-talent-inc.mdx
+++ b/gatsby/content/what-i-learned-at-talent-inc.mdx
@@ -8,7 +8,7 @@ tags:
   - code
 ---
 
-Today is my last day working at [Talent Inc](https://talentinc.com/). I've been there for 4 years, which is the longest
+Today is my last day working at [Talent Inc](https://talentinc.com/). I've been there four years, which is the longest
 I have ever held a job and it's the first product startup I've ever worked at. I feel extremely lucky for this
 experience and I would like the opportunity to say goodbye and share some lessons I learned.
 
@@ -34,11 +34,11 @@ Here are some cool tech patterns I learned around this:
 1. **Tagging systems are amazing.** It allows non-technical people to add metadata to records that you can later build
    technical processes around.
 2. I had never worked with a BI platform like Periscope Data and now I don't think I can work anywhere that doesn't have
-   one. The amount of SQL I've seen written by supposedly non-technical people to empower their own processes was not
-   something I expected. It allowed me to share new schemas I made with them and then they were able to make their own
+   one. **The amount of SQL I've seen written by supposedly non-technical people to empower their own processes was not
+   something I expected.** It allowed me to share new schemas I made with them and then they were able to make their own
    dashboards to accomplish their tasks.
 3. At previous jobs, I was likely to script up a CLI program to alter data in bug recovery mode. My definition of bugs
-   were very loose and frequently I would become a point of failure. My time at Talent forced me to move these scripts
+   was very loose and frequently I would become a point of failure. My time at Talent forced me to move these scripts
    to a web interface where I or anyone could run them with a press of a button. The next step of that is to design
    admin interfaces that are as close to writing to the database itself so that users can fix their own mistakes. **The
    less work I do, the happier I am.**
@@ -51,11 +51,12 @@ much. I will never forget your kindness and understanding.**
 ## So Many Data Pipelines
 
 All my jobs previous to this were mostly at consulting firms. One thing I can tell you about consulting is that you are
-somewhat separated from the end user. My joke about my consulting is the main problem you are solving is getting that
+somewhat separated from the end user. My joke about consulting is the main problem you are solving is getting that
 next check to show up. As such, your users can become adversaries in your mind. You get okay with dropping events. You
-deprioritize bugs because it doesn't effect your bottom line.
+deprioritize bugs because it doesn't effect your bottom line. You wonder what all the bellyaching is about when an email
+doesn't show up.
 
-The concerns are different when you work at a customer focused startup though. Things have to be fast, so you push as
+The concerns are different when you work at a customer focused startup, though. Things have to be fast, so you push as
 much off the request thread as possible. That stuff off the main thread needs to run reliably, so you throw money at AWS
 for SQS and write a lot of Lambdas (which are my favorite technological discovery during my time at Talent Inc, if
 I ever start a company, it will be all Lambdas). **If you drop events, you're dropping revenue and user trust.**
@@ -63,9 +64,9 @@ I ever start a company, it will be all Lambdas). **If you drop events, you're dr
 ## Experimentation Is Crucial
 
 I'm ashamed to say that I never ran an A/B test before my time at Talent. It's just not a concern for early stage
-consulting gigs. That changed very quickly for me an now I can't go back. We used A/B tests for everything:
+consulting gigs. That changed very quickly for me and now I can't go back. We used A/B tests for everything:
 
-* You want to see which copy will make more money? Split test and let revenue tell the truth.
+* You want to see which version will make more money? Split test and let revenue tell the truth.
 * You have a feature that's a little raw that you want help debugging? Hide it behind a feature flag and watch Sentry,
   the users will test if for you.
 
@@ -79,22 +80,22 @@ flagged a bunch of stuff by roles/tags.
 At previous jobs, especially the consulting ones, we followed some version of a [Git flow branching model](https://datasift.github.io/gitflow/IntroducingGitFlow.html).
 At Talent, we followed something closer to a trunk based approach. At first, if I'm honest, I really hated the trunk
 based approach. With Git Flow, you have time and space to perfect your code with constant merges. Only when your feature
-is ready to go do you release it to the world. With the trunk based model, one your code is in main and someone requests
-a release, 99.999% of the time, that code is going to production ASAP and we're not cherry picking around it.
+is ready to go do you release it to the world. With the trunk based model, once your code is in main and someone
+requests a release, 99.999% of the time, that code is going to production ASAP and we're not cherry picking around it.
 
-To get around this limitation, I would make massive PRs and only put them in main once I was happy. But that would cause
-me to ship bugs and would make it hard for larger changes to be shared with other developers. Then I started making
-"long lived feature" branches for the larger changes that I would have teammates put PRs against that. That's the right
-move _sometimes_, but it leads to a lot of code drift as main moves ahead of it. Finally, our team had a rule that
-a **ticket/card cannot be marked as done until it's in production.** I was frustrated and I wanted to blow the whole
-thing up!
+To get around this limitation, I would make massive <abbr title="Pull Requests">PRs</abbr> and only put them in main
+once I was happy. But that would cause me to ship bugs and would make it hard for larger changes to be shared with other
+developers. Then I started making "long lived feature branches" for the larger changes that I would have teammates put
+PRs against that. That's the right move _sometimes_, but it leads to a lot of code drift as main moves ahead of it.
+Finally, our team had a rule that a **ticket/card cannot be marked as done until it's in production.** I was frustrated
+and I wanted to blow the whole thing up!
 
 In a 1 on 1 with my boss, I brought up my issues and why I hated it. Could we change it? And this when he dropped this
 bomb on me:
 
-> You can get it to production, users don't have to be able to access it, it just needs to be in production. You can
-> wrap it in a feature flag, put it behind a split test at 0%, you can even disable it based upon environment variables.
-> If you get it to production, the velocity will move faster, trust me.
+> You can get it to production, I believe in you, users don't have to be able to access it, it just needs to be in
+> production. You can wrap it in a feature flag, put it behind a split test at 0%, you can even disable it based upon
+> environment variables. If you get it to production, the velocity will move faster, trust me.
 
 This was revelation! Oh how could I have been so close minded!? On my next task like this, I simply wrapped my feature
 so it was only accessible by developers and project managers and I shipped it. And wouldn't you know it, by being able
@@ -112,10 +113,10 @@ As you can tell, I enjoyed my time at Talent Inc and I hope they enjoyed having 
 I cannot recommend them enough. The future is very bright there and I'm sad that I won't be around to see it. 
 
 At the same time, I'm very excited for what's next. I don't even know what is next. I only have one speed which is "go
-so hard I burnout once a year". I should probably work on that. I'm going to take a few weeks to establish some better
+so hard I burnout once a year". I should probably work on that… I'm going to take a few weeks to establish some better
 habits and doing a through job search next year.
 
 <figure>
   <img src="./img/what-i-learned-working-at-talentinc/reading-on-couch.jpeg" alt="Me & a coworker in a marketing photo looking at an empty notebook" />
-  <figcaption>It's Very Easy To End Up On The Website</figcaption>
+  <figcaption>You never know when you're going to show up on the marketing website…</figcaption>
 </figure>
