Last changes on this post, I swear.

--- a/gatsby/content/what-i-learned-at-talent-inc.mdx
+++ b/gatsby/content/what-i-learned-at-talent-inc.mdx
@@ -16,9 +16,9 @@ experience and I would like the opportunity to say goodbye and share some lesson
 
 When I first started at Talent Inc, I was working on software that was used by our internal operational team. I was
 paired up with an engineer that had been with the company for forever through an acquisition. In my first month working
-there he said something that has stuck with me for ever since:
+there he said something that has stuck with me ever since:
 
-> We have the best users, we have to treat them right.
+> We have the best users, we have to treat them right. They are patient and we should reward them.
 
 I could not put it better myself. That operational team works with job seekers whom can understandably be demanding. Job
 searching is in the top 3 most stressful moments of their lives. What's incredible about both of these user groups
@@ -37,11 +37,11 @@ Here are some cool tech patterns I learned around this:
    one. **The amount of SQL I've seen written by supposedly non-technical people to empower their own processes was not
    something I expected.** It allowed me to share new schemas I made with them and then they were able to make their own
    dashboards to accomplish their tasks.
-3. At previous jobs, I was likely to script up a CLI program to alter data in bug recovery mode. My definition of bugs
-   was very loose and frequently I would become a point of failure. My time at Talent forced me to move these scripts
-   to a web interface where I or anyone could run them with a press of a button. The next step of that is to design
-   admin interfaces that are as close to writing to the database itself so that users can fix their own mistakes. **The
-   less work I do, the happier I am.**
+3. At previous jobs, I was likely to script up a <abbr title="Command Line Interface">CLI</abbr> program to alter data
+   in bug recovery mode. My definition of bugs was very loose and frequently I would become a point of failure. My time
+   at Talent forced me to move these scripts to a web interface where I or anyone could run them with a press of
+   a button. The next step of that is to design admin interfaces that are as close to writing to the database itself so
+   that users can fix their own mistakes. **The less work I do, the happier I am.**
 
 It goes without saying, but I will say it because it's important: **I am going to miss working with these people so
 much. I will never forget your kindness and understanding.**
