I need to shorten this soon

--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -224,32 +224,36 @@ on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro 
   className="float-right"
 />
 
-I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
-subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
-loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
-flexitarian four dollar toast.
-
-Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
-flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
-
-Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
-skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
-cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
-on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+Wiki has been one of my favorite rappers for years. [_No Mountains In Manhattan_][nmim] was the perfect love letter to
+NYC and Ratking's [_So It Goes_][so-it-goes] is my personal favorite walking in NYC in the winter album. When I learned
+that he was doing a whole album produced by [Navy Blue][navy-blue] I got very excited!
 
 ## 8. _GLOW ON_ - Turnstile
 
 <AlbumEmbed spotifyID="2NrYPcMmQBlbBxopc2XlzS" className="float-right" />
 
-I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
-subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
-loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
-flexitarian four dollar toast.
+Even though I love emo music, I'm not the biggest fan of super heavy music. Metal doesn't do it for me and I frequently
+avoid hardcore music. So it was very much a surprise to me how much I loved _GLOW ON_ from Turnstile.
 
-Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
-flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
+## 9. _Live Forever_ - Bartees Strange
 
 Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
 skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
 cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
 on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+
+# Quick Hits
+
+## Favorite TV Shows
+
+1. _Search Party_: Love that each season has a different theme, this one was a _Misery_ style season. Cole Escola is
+   a force.
+
+## Favorite Podcasts
+
+1. _The Right Time With Bomani Jones_
+2. _The Shutdown Fullcast_: This podcast has dragged me back to loving college football. So nerdy, so funny and dumb.
+
+[nmim]: https://xlrecordings.com/buy/wiki-nomountainsinmanhattan
+[so-it-goes]: https://shopusa.xlrecordings.com/so-it-goes
+[navy-blue]: https://navybluethetruest.bandcamp.com/
