--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -75,6 +75,14 @@ subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hash
 loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
 flexitarian four dollar toast.
 
+# 2021 Goals
+
+1. 🎾 Get back into tennis
+2. 👨‍💻 Get a new job that I love
+3. 💍 Get engaged
+4. 🌞 Wake up earlier
+5. 🤑 Save at least $1500 a month
+
 # Top Albums
 
 ## 1. _I Became Birds_ - Home Is Where
