Albums after 5 are getting the quick hits treatment

--- a/gatsby/content/2021-my-year-in-lists.mdx
+++ b/gatsby/content/2021-my-year-in-lists.mdx
@@ -133,8 +133,9 @@ Gambino album because of Drama and it's format. In past albums, Tyler has had va
 braggadocios than him to speak his id. On _CMIYGL_, DJ Drama is that alter ego that talks all the shit and I am here for
 it!
 
-I love the brutal honesty on each song and am so happy that Tyler has found his way in the world. Could anyone have seen
-Odd Future still turning in classics a decade later?
+I love the brutal honesty on each song and am so happy that Tyler has found his way in the world. The Wes Anderson
+styled video rollout was amazing. Could anyone have seen Odd Future still turning in classics & impacting culture at
+this level a decade later?
 
 ## 3. _Pray For Hati_ - Mach-Hommy
 
@@ -205,50 +206,13 @@ skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharro
 cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
 on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
 
-## 6. _The House Is Burning_ - Isaiah Rashad
-
-<AlbumEmbed spotifyID="6TQ8nqw43uUOWu7Yqp58ko" className="float-right" />
-
-I'm baby craft beer thundercats hexagon skateboard. Jean shorts messenger bag austin brunch health goth chicharrones
-subway tile flexitarian la croix quinoa pitchfork tofu 3 wolf moon chambray hashtag. Synth beard echo park glossier four
-loko. Kale chips wolf skateboard ramps taiyaki messenger bag raw denim mixtape schlitz etsy offal taxidermy heirloom
-flexitarian four dollar toast.
-
-Vinyl pop-up jianbing mlkshk snackwave four loko. Lumbersexual humblebrag gochujang salvia synth. Occupy cornhole
-flexitarian hot chicken. Hoodie bicycle rights mlkshk ramps viral. Cred hashtag activated charcoal tilde pabst disrupt.
-
-Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
-skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
-cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
-on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
-
-## 7. _Half God_ - Wiki
-
-<AlbumEmbed
-  name="Half God"
-  artist="Wiki"
-  url="https://wiksetnyc.bandcamp.com/album/half-god"
-  bandcampID="2800528835"
-  className="float-right"
-/>
-
-Wiki has been one of my favorite rappers for years. [_No Mountains In Manhattan_][nmim] was the perfect love letter to
-NYC and Ratking's [_So It Goes_][so-it-goes] is my personal favorite walking in NYC in the winter album. When I learned
-that he was doing a whole album produced by [Navy Blue][navy-blue] I got very excited!
-
-## 8. _GLOW ON_ - Turnstile
-
-<AlbumEmbed spotifyID="2NrYPcMmQBlbBxopc2XlzS" className="float-right" />
-
-Even though I love emo music, I'm not the biggest fan of super heavy music. Metal doesn't do it for me and I frequently
-avoid hardcore music. So it was very much a surprise to me how much I loved _GLOW ON_ from Turnstile.
-
-## 9. _Live Forever_ - Bartees Strange
-
-Marfa pok pok letterpress bitters, offal live-edge sriracha mustache sustainable polaroid humblebrag banh mi poke
-skateboard. Whatever chia woke crucifix, vice jianbing semiotics fixie chicharrones. Iceland cloud bread meggings
-cold-pressed polaroid vape flexitarian enamel pin venmo. Kitsch cliche gluten-free mumblecore enamel pin YOLO put a bird
-on it fingerstache, glossier iceland. Pop-up live-edge affogato, bushwick retro lo-fi man bun.
+<ol start="6">
+  <li>_The House Is Burning_ - Isaiah Rashad</li>
+  <li>[_Half God_ - Wiki](https://wiksetnyc.bandcamp.com/album/half-god)</li>
+  <li>_GLOW ON_ - Turnstile</li>
+  <li>_Live Forever_ - Bartees Strange</li>
+  <li>_Disco_ - MIKE</li>
+</ol>
 
 # Quick Hits
 
